tests/expectations/compiler/futures/async_function_called_different_fail.out
Error [ETYC0372124]: Cannot access argument `0` from future.
    --> compiler-test:7:23
     |
   7 |         let x: u8 = f.0;
     |                       ^
     |
     = Ensure that the async function is not called with multiple times with incompatible types.
